--- a/public/HTML/index.html
+++ b/public/HTML/index.html
@@ -5,15 +5,49 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 		<title>Main_index</title>
 		<link rel="stylesheet" href="/css/def.css"/>
-		<script src="https://cdn.staticfile.org/jquery/3.6.0/jquery.min.js"></script>
+		<script src="/JS/jquery.min.js"></script>
 		<script src="/JS/background.js"></script>
+		<script src="/JS/jump.js"></script>
 	</head>
 	<body>
 		<div id="follow_bg">
 			<img src="../img/Image_1716011177383.png"/>
 		</div>
-			<div class="titlebox">
-				<h1 class="title">YiQing's Website</h1>
+		<div class="titlebox">
+			<h1 class="title">YiQing's Website</h1>
+		</div>
+		<div class="nav-box">
+			<ul>
+				<li>
+					<div class="nav-block">
+						<a href="#follow_bg" class="hide-decoration">Main</a>
+					</div>
+				</li>
+				<li>
+					<div class="nav-block">
+						<span>About</span>
+					</div>
+				</li>
+				<li>
+					<div class="nav-block on two">
+						<span>YiQing's Friends</span>
+					</div>
+					
+					<ul class="nav-two">
+						<li>
+							<span>蓝伊_adict</span>
+						</li>
+						<li>
+							<span>墨鱼</span>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+			<div class="Text">
+				<div class="TextTitle">
+					<h2>About</h2>
+				</div>
 			</div>
 	</body>
 </html>
