--- a/public/HTML/index.html
+++ b/public/HTML/index.html
@@ -11,13 +11,15 @@
 	</head>
 	<body>
 		<div id="follow_bg">
-			<img src="../img/Image_1716011177383.png"/>
+			<img src="../img/bg.png"/>
 		</div>
 		<div id="Welcome" class="titlebox">
 			<h1 class="title">YiQing's Website</h1>
 			<h3>Welcome to YiQing's website!</h3>
 			<h4>Add me a friend!</h4>
-			<button class="button_addfriend" onclick='location.href="http://ti.qq.com/friends/recall?uin=481285138"'><img src="../img/favicon-default.png">QQ</button>
+			<button class="button_addfriend" style="transform: translate(200%,0);" onclick='location.href="http://ti.qq.com/friends/recall?uin=481285138"'><img src="../img/QQ.png">QQ</button>
+			<button class="button_addfriend" style="transform: translate(350%,0);" onclick="location.href='https://space.bilibili.com/1554438180'"><img src="../img/BiliBili.png"></button>
+			<h2>Nice to meet you!</h2>
 		</div>
 		<div class="nav-box">
 			<ul>
@@ -51,8 +53,25 @@
 				<hr />
 				<div id="About" class="TextTitle">
 					<h1>About</h1>
-					<a></a>
-					<hr />
+					<a>Hello,there is <a style="font-size: 2.5rem; color: rgba(77, 77, 77, 0.8);">YiQing's</a><a> website.</a>
+					<br />
+					<br />
+					<a>As you can see, I am a </a><a style="font-size: 2.5rem; color: rgba(77, 77, 77, 0.8);">Furry</a><a> boy.</a>
+					<br />
+					<br />
+					<a>I have many hobbies, such as </a><a style="font-size: 2.5rem; color: rgba(77, 77, 77, 0.8);">coding </a><a>,</a><a style="font-size: 2.5rem; color: rgba(77, 77, 77, 0.8);"> painting</a><a>,</a><a> and <a style="font-size: 2.5rem; color: rgba(77, 77, 77, 0.8);">music</a><a>.</a></a>
+					<br />
+					<br />
+					<a>I hope we can <a style="font-size: 2.5rem; color: rgba(77, 77, 77, 0.8);">get</a><a> along well</a>
+					<br />
+					<br />
+					<a>If you want,you can <a style="font-size: 2.5rem; color: rgba(77, 77, 77, 0.8);">touch</a> <a> and </a> <a style="font-size: 2.5rem; color: rgba(77, 77, 77, 0.8);">hug</a><a> me.</a>
+					<br />
+					<br />
+					<hr style="position: absolute;left: 20%; border: 1 dashed #987cb9;" width="75%" color="#909090" size=1.5/>
+					<h1>YiQing's friends</h1>
+					<img src="/public/img/Lanyi.jpg">
+					<h2>蓝伊_adict</h2>
 				</div>
 			</div>
 	</body>
